--- a/src/main/resources/templates/velocity/getter_prototype.vm
+++ b/src/main/resources/templates/velocity/getter_prototype.vm
@@ -4,11 +4,11 @@
      D               E DS                  Extname(${ds.fileName}:*KEY)
      D                                     Qualified Template
 
-     D find_${ds.fileName}M...
+     D find_${ds.fileName}...
      D                 Pr              N
      D  inKey                              Const LikeDS(key${ds.fileName}_t)
 
 #foreach ($f in $ds.fields)
-     D get_${f.name}_${ds.fileName}M...
+     D get_${f.name}_${ds.fileName}...
      D                 Pr                  Like(${ds.fileName}_t.${f.name})
 #end
